<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="346dp"
        android:layout_height="32dp"
        android:autofillHints=""
        android:background="#D5D0D0"
        android:ems="9"
        android:hint="@string/address"
        android:inputType="text"
        android:minHeight="30dp"
        android:paddingStart="10dp"
        android:textColorHint="#455A64"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextSizeCheck" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="346dp"
        android:layout_height="32dp"
        android:autofillHints=""
        android:background="#D5D0D0"
        android:ems="9"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="30dp"
        android:paddingStart="10dp"
        android:textColorHint="#455A64"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/baseline_wb_sunny_24"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="@string/lifecycle"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:text="@string/last_name"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#D5D0D0"
        android:ems="9"
        android:hint="@string/first_name"
        android:inputType="text"
        android:minHeight="30dp"
        android:paddingStart="10dp"
        android:textColorHint="#455A64"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextSizeCheck" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#D5D0D0"
        android:ems="9"
        android:hint="@string/last_name"
        android:inputType="text"
        android:minHeight="30dp"
        android:paddingStart="10dp"
        android:textColorHint="#455A64"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextSizeCheck" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="Female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="Gender"
        app:layout_constraintStart_toStartOf="@+id/first_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Birthday"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/birthday_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D5D0D0"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="date"
        android:paddingStart="10dp"
        android:textColorHint="#455A64"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"

        android:text="Select"
        app:layout_constraintBottom_toBottomOf="@+id/birthday_edit_text"
        app:layout_constraintStart_toEndOf="@+id/birthday_edit_text"
        app:layout_constraintTop_toTopOf="@+id/birthday_edit_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Address"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/birthday_edit_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Email"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/address_edit_text" />

    <CheckBox
        android:id="@+id/checkbox_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/i_agree_to_terms_of_use"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_terms" />

    <Button
        android:id="@+id/btn_linear"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_marginTop="76dp"
        android:text="LinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />


</androidx.constraintlayout.widget.ConstraintLayout>